# CG-project---WRP-

./: Astar.cpp  Astar.cpp.o.d  Astar.h  CMakeCache.txt  CMakeConfigureLog.yaml  CMakeDirectoryInformation.cmake  CMakeLists.txt  DependInfo.cmake  Makefile  Makefile.cmake  Makefile2  README.md  Snell.cpp.o.d  TargetDirectories.txt  anotherName  build.make  clion-Debug-log.txt  cmake_clean.cmake  cmake_install.cmake  compiler_depend.internal  compiler_depend.make  compiler_depend.ts  delaunay_trig.cpp  delaunay_trig.cpp.o.d  delaunay_trig.h  depend.make  dijkstra.cpp  dijkstra.cpp.o.d  dijkstra.h  directly_file.txt  discretization.cpp  discretization.cpp.o.d  discretization.h  experimentPart.cpp  experimentPart.cpp.o.d  experimentPart.h  fallback_input.txt  flags.make  graph.h  link.txt  (+36 more)
